# Boids

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
execs/: CMakeLists.txt
execs/include/: boid.hpp  exception.hpp  texture.hpp  timer.hpp  vector2d.hpp  window.h  window.hpp
execs/include/boids/: boid.hpp  flock.hpp  fwd.hpp  randomGenerator.hpp  sense.hpp  texture.hpp  timer.hpp  vector2d.hpp  window.hpp
execs/src/: boid.cpp  flock.cpp  main.cpp  sense.cpp  texture.cpp  timer.cpp  vector2d.cpp  window.cpp
libs/: CMakeLists.txt
libs/SDL2/: CMakeLists.txt
libs/SDL2_image/: CMakeLists.txt
libs/eigen/: CMakeLists.txt
libs/gtest/: CMakeLists.txt
tests/: CMakeLists.txt
tests/src/: boid.cpp  sense.cpp  vector2d.cpp
